--- a/eltromax/style.css
+++ b/eltromax/style.css
@@ -11,11 +11,15 @@ body{
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    background-color: #e1e1e1;
 }
 
 nav{
     display: flex;
     background-color: #ced4da;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 #nav-content{
     display: flex;
@@ -95,8 +99,8 @@ nav{
 #dropdown-nav{
     display: none;
     width: 100%;
-    background-color: black;
-    color: white;
+    background-color: #ced4da;
+    color: black;
     padding-left: 10px;
     transition: max-height 0.3s ease, opacity 0.3s ease;
     opacity: 0;
@@ -126,7 +130,7 @@ nav{
 }
 
 .dropdown-link:hover{
-    background-color: rgb(175, 0, 0);
+    background-color: #213bc3;
     color: rgb(255, 255, 255);
 }
 
@@ -142,13 +146,18 @@ nav{
 
 #dropdown-facebook:hover{
     background-color: rgb(24, 119, 242);
+    
 }
-
+#dropdown-facebook:hover svg{
+    fill: white;
+    
+}
 #dropdown-contnet svg{
     width: 35px;
     height: 35px;
     margin-left: 10px;
-    fill: white;
+    fill: rgb(0, 0, 0);
+    transition: 0.3s;
 }
 
 @media (max-width: 920px){
@@ -163,6 +172,9 @@ nav{
 main{
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
     
 }
 #cards{
@@ -170,29 +182,41 @@ main{
     width: 90%;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
     justify-content: center;
     gap: 20px;
 }
 .card{
-    width: 280px;
+    width: 300px;
     height: 450px;
-    background-color: white;
+    background-color: rgb(250, 249, 249);
+    transition: 0.3s;
     border-radius: 15px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 7px 11px 17px -16px rgba(0, 0, 0, 1);
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 25px;
     padding: 15px 10px;
+}
 
+.card:hover{
+    box-shadow: 7px 11px 17px -16px rgba(0, 0, 0, 0.5);
+    transform: scale(1.05);
     
 }
+
 .card > img{
     width: 100%;
     height: 150px;
     object-fit: cover;
     border-radius: 10px;
-    
+}
+
+.card h4{
+    background-color: #ffee32;
+    padding: 5px 10px; 
+    color: black;
+    border-radius: 15px;
 }
 
 .card-button{
@@ -216,4 +240,11 @@ main{
 .card-button:hover{
     background-color: #3d5cf5;
     color: white;
+}
+
+@media (max-width: 690px) {
+    .card {
+        width: 100%;
+        min-width: 250px;
+    }
 }
