--- a/eltromax/style.css
+++ b/eltromax/style.css
@@ -12,6 +12,7 @@ body{
     font-weight: 400;
     font-style: normal;
     background-color: #e1e1e1;
+
 }
 
 nav{
@@ -20,6 +21,8 @@ nav{
     position: sticky;
     top: 0;
     z-index: 1000;
+    border-bottom: 5px solid #213bc3;
+    
 }
 #nav-content{
     display: flex;
@@ -174,19 +177,31 @@ main{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
     
+}
+
+main h2{
+    font-size: 30px;
+    margin: 20px 0;
+    width: 100%;
+    text-align: center;
+    background-color: #213bc3;
+    color: white;
+    padding: 5px 0;
     
 }
 #cards{
-    margin-top: 50px;
     width: 90%;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     justify-content: center;
     gap: 20px;
+    margin: 50px 0;
+    place-items: center; 
 }
 .card{
-    width: 300px;
+    
     height: 450px;
     background-color: rgb(250, 249, 249);
     transition: 0.3s;
@@ -197,6 +212,7 @@ main{
     justify-content: center;
     gap: 25px;
     padding: 15px 10px;
+    
 }
 
 .card:hover{
@@ -242,9 +258,66 @@ main{
     color: white;
 }
 
+#partners{
+    margin-top: 20px;
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 20px;
+    flex-direction: row;
+    align-items: center;
+}
+
+.partner img{
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media (max-width: 690px) {
     .card {
         width: 100%;
-        min-width: 250px;
+        
+        
     }
 }
+@media (max-width: 500px) {
+    #logo{
+        width: 100%;
+        max-width: 200px;
+        height: auto;
+    }
+    #partners img{
+        width: 100%;
+        max-width: 180px;
+        height: auto;
+    }
+}
+
