--- a/eltromax/style.css
+++ b/eltromax/style.css
@@ -11,17 +11,18 @@ body{
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    background-color: #e1e1e1;
+    background-color: rgb(255, 255, 255);
+    color: white;
 
 }
 
 nav{
     display: flex;
-    background-color: #ced4da;
+    background-color: #ddd7d7;
     position: sticky;
     top: 0;
     z-index: 1000;
-    border-bottom: 5px solid #213bc3;
+    border-bottom: 5px solid #ffba08;
     
 }
 #nav-content{
@@ -77,7 +78,7 @@ nav{
     border-radius: 15px;
 }
 .nav-link:hover{
-    background-color: #213bc3;
+    background-color: #d73939;
     color: rgb(255, 255, 255);
 }
 
@@ -186,24 +187,26 @@ main h2{
     margin: 20px 0;
     width: 100%;
     text-align: center;
-    background-color: #213bc3;
+    background-color: #000000;
     color: white;
     padding: 5px 0;
     
 }
 #cards{
-    width: 90%;
+    width: 85%;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(3, 380px);
     justify-content: center;
     gap: 20px;
     margin: 50px 0;
     place-items: center; 
+    color: white;
 }
 .card{
     
     height: 450px;
-    background-color: rgb(250, 249, 249);
+    background-color: #cecdc9;
+    color: black;
     transition: 0.3s;
     border-radius: 15px;
     box-shadow: 7px 11px 17px -16px rgba(0, 0, 0, 1);
@@ -212,7 +215,7 @@ main h2{
     justify-content: center;
     gap: 25px;
     padding: 15px 10px;
-    
+    border: 2px solid #000000;
 }
 
 .card:hover{
@@ -229,19 +232,19 @@ main h2{
 }
 
 .card h4{
-    background-color: #ffee32;
+    background-color: #000000;
     padding: 5px 10px; 
-    color: black;
+    color: white;
     border-radius: 15px;
 }
 
 .card-button{
     width: 100%;
     height: 40px;
-    background-color: rgb(175, 0, 0);
+    background-color: #d73939;
     color: white;
     margin-top: 10px;
-    background-color: #213bc3;
+    
     border-radius: 25px;
     transition: 0.3s;
 }
@@ -254,7 +257,7 @@ main h2{
     height: 100%;
 }
 .card-button:hover{
-    background-color: #3d5cf5;
+    background-color: #c41515;
     color: white;
 }
 
@@ -298,14 +301,16 @@ main h2{
 
 
 
-
+@media (max-width: 1280px) {
+    #cards{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
 
 
 @media (max-width: 690px) {
-    .card {
-        width: 100%;
-        
-        
+    #cards{
+        grid-template-columns: repeat(1, 1fr);
     }
 }
 @media (max-width: 500px) {
